@@ -351,5 +351,33 @@ sub store_file_from_fh {
     };
 }
 
+sub store_file {
+    my ($self, $key, $class, $fn, $opts) = @_;
+
+    if (ref($fn) ne 'SCALAR') {
+        warn "not scalar!";
+        return $self->SUPER::store_file($key, $class, $fn, $opts);
+    }
+
+    open(my $fh, "<", $fn) or die "could not open '$fn': $!";
+
+    my $file_length = -s $fh;
+
+    my $cb = $self->store_file_from_fh(
+        $key, $class, $fh, $file_length, $opts
+    );
+
+    open(my $checksum, "-|", "md5sum", "-b", "--", $fn) or die "could not fork off md5sum: $!";
+    $cb->($file_length, 0);
+    my $line = <$checksum>;
+    close($checksum) or die "could not finish checksum: $!";
+
+    $checksum =~ /^([0-9a-f]{32})/ or die "could not find checksum";
+
+    $cb->($file_length, 1);
+
+    return $file_length;
+}
+
 1;
 
